--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font: 20px "Gill Sans", Verdana, sans-serif;
     line-height: 1.8;
-    color: #567389;
+    color: #ebccb2;
     background-color: #987654;
     padding-top: 0px !important;
   }
