--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font: 20px "Gill Sans", Verdana, sans-serif;
+    font: 20px "Lucida Console", "Courier New", monospace;
     line-height: 1.8;
     color: #ebccb2;
     background-color: #987654;
