--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font: 20px papyrus, monospace;
     line-height: 1.8;
     color: #ebccb2;
-    background-color: #987654;
+    background-color: #77D8E5;
     padding-top: 0px !important;
   }
 
