--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font: 20px papyrus, monospace;
+    font: 20px georgia, monospace;
     line-height: 1.8;
     color: #606D5D;
     background-color: #88958d;
