--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font: 20px papyrus, monospace;
     line-height: 1.8;
-    color: #606D5D;
+    color: ##4C5F49;
     background-color: #88958d;
     padding-top: 0px !important;
   }
